2011-02-23  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_ui.php: Merged from trunk. Call safe_output instead
	  of safe_output_html.

2011-02-03 Javier Lanz <javier.lanz@artica.es>

	* extensions/agents_modules.php: Fixed an error in the header of
	Agent/Module extension

	Fix: #3152681

2011-02-22  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql,
	  DEBIAN/control,
	  DEBIAN/make_deb_package.sh,
	  install.php,
	  pandora_console.spec: Updated version strings.

2011-02-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Added connect_db function
	from update_manager db library to pandora_db

	* extensions/update_manager/sql/update_manager.sql: Changed
	the open update manager server path from 32 to 321

	* extensions/update_manager/lib/db
	extensions/update_manager/lib/db/functions_db.mysql.php: 
	Deleted db library to use the pandora functions_db

2011-02-22  Sergio Martin <sergio.martin@artica.es>

	* install.php: Removed the PEAR dependences
	checking in install

2011-02-22  Sancho Lerena <slerena@artica.es>

	* install.php: Installer version update (3.2.1)

2011-02-22  Sergio Martin <sergio.martin@artica.es>

	* extensions/update_manager.php
	extensions/update_manager/load_updatemanager.php
	extensions/update_manager/lib/load_updatemanager.php
	extensions/update_manager/lib/db
	extensions/update_manager/lib/db/functions_db.mysql.php
	extensions/update_manager/lib/xmlrpc
	extensions/update_manager/lib/xmlrpc/xmlrpcs.inc
	extensions/update_manager/lib/xmlrpc/xmlrpc_wrappers.inc
	extensions/update_manager/lib/xmlrpc/xmlrpc.inc
	extensions/update_manager/lib/libupdate_manager_client.php
	extensions/update_manager/lib/libupdate_manager.php
	extensions/update_manager/lib/libupdate_manager_utils.php
	extensions/update_manager/lib/libupdate_manager_components.php
	extensions/update_manager/lib/libupdate_manager_updates.php
	extensions/update_manager/settings.php
	extensions/update_manager/main.php: Upgraded open update manager 